# LatinX

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
code/: __init__.py
code/data/sine_cosine_translator/: sine_cosine_translator
code/models/: __init__.py
examples/: bessel_ripple_with_bll_example.py  mexican_hat_with_bll_example.py  plot_mexican_hat_demo.py  ricker_wavelet_with_bll_example.py  rossler_example.py
latinx/: __init__.py
latinx/data/: README.md  __init__.py
latinx/data/bessel_ripple/: __init__.py  bessel_ripple_translator.py
latinx/data/ett/: __init__.py  ett_loader.py
latinx/data/mexican_hat/: __init__.py  mexican_hat_translator.py
latinx/data/ricker_wavelet/: __init__.py  ricker_wavelet_translator.py
latinx/data/rossler/: __init__.py  rossler_translator.py
latinx/data/sine_cosine/: __init__.py  sine_cosine_translator.py
latinx/data/sine_cosine_translator/: sine_cosine_translator
latinx/metrics/: __init__.py  metrics_bayesian_last_layer.py  metrics_kalman_filter.py
latinx/models/: __init__.py  bayesian_fft_adapter.py  bayesian_last_layer.py  bll_utils.py  eft_linear_fft.py  kalman_filter.py  ols_linear_forecaster.py  rnn.py  rnn_jax.py  standalone_bayesian_last_layer.py
latinx/plotting/: __init__.py  bessel_ripple_plots.py  common.py  mexican_hat_plots.py  ricker_wavelet_plots.py
notebooks/: Sine_LRU.ipynb  last-layer-bnn.ipynb
scripts/caue/: Bessel_Ripple_BLL_Standalone.py  Bessel_Ripple_KF.py  Rossler_KF.py
scripts/caue/elf/: CLAUDE.md  fm.py  fm_ols.py
scripts/kurt/: Sine_LRU.py
scripts/kurt/one-dim check/: Sine_experiment.py
scripts/one-dimension/sin-waves/: Sine_LRU.py  Sine_LRU_KF_update.py
scripts/validation/: blr_kf_validation.py
tests/: __init__.py  test_data.py  test_import.py  test_models.py
tests/data/: test_bessel_ripple.py  test_data.py  test_mexican_hat.py  test_rossler.py
tests/metrics/: test_bayesian_last_layer_metrics.py
tests/models/: test_bayesian_last_layer.py  test_kalman_filter.py  test_ols_linear_forecaster.py  test_standalone_bayesian_last_layer.py
tests/plotting/: test_bessel_ripple_plots.py  test_mexican_hat_plots.py
