[project]
name = "latinx"
version = "0.1.0"
description = "LatinX — collaborative research & ML experiments on Bayessian Last Layer"
authors = [
  { name = "KurtSoncco", email = "kurtwal98@berkeley.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"

# Core runtime dependencies for data-science, JAX-first ML work, PyTorch (CPU default),
# plotting (matplotlib.pyplot + interactive plotly), and basic Google cloud clients.
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",    # pyplot
  "plotly>=5.16",      # interactive plots
  "seaborn>=0.13",
  "jupyterlab>=4.0",

  # JAX (Python package). jaxlib (native backend) often must be installed
  # specially for GPUs/TPUs; see CONTRIBUTING.md for GPU/TPU install instructions.
  "jax>=0.4",

  # PyTorch (CPU by default). For GPU builds prefer following instructions on pytorch.org.
  "torch>=2.2",
  "torchvision>=0.18",
  "torchaudio>=2.2",

  # Google cloud helpers (kept minimal; add more as needed)
  "google-cloud-storage>=2.12",
  "google-cloud-aiplatform>=1.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.3",
  "isort>=5.13",
  "pre-commit>=3.4",
  "mypy>=1.6"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# NOTES:
# - Astral 'uv' will read pyproject.toml to install declared dependencies.
# - jaxlib (the compiled backend for JAX) often must be installed via a wheel that
#   matches your CUDA/ROCm/CPU configuration. See CONTRIBUTING.md for recommended
#   steps to install jaxlib after running `uv install`.