[project]
name = "latinx"
version = "0.1.0"
description = "LatinX — collaborative research & ML experiments on Bayessian Last Layer"
authors = [
  { name = "KurtSoncco", email = "kurtwal98@berkeley.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"

# Core runtime dependencies for data-science, JAX-first ML work, PyTorch (CPU default),
# plotting (matplotlib.pyplot + interactive plotly), and basic Google cloud clients.
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",    # matplotlib
  "plotly>=5.16",      # interactive plots
  "seaborn>=0.13",
  "jupyterlab>=4.0",

  # JAX (Python package). jaxlib (native backend) often must be installed
  # specially for GPUs/TPUs; see CONTRIBUTING.md for GPU/TPU install instructions.
  "jax>=0.4",

  # PyTorch (CPU by default). For GPU builds prefer following instructions on pytorch.org.
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"