[project]
name = "latinx"
version = "0.1.0"
description = "LatinX — collaborative research & ML experiments on Bayesian Last Layer"
authors = [
  { name = "KurtSoncco", email = "kurtwal98@berkeley.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["machine-learning", "bayesian", "jax", "pytorch", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.1,<3.0",
  "scipy>=1.11,<2.0",
  "matplotlib>=3.8,<4.0",
  "plotly>=5.16,<6.0",
  "seaborn>=0.13,<1.0",
  "jupyterlab>=4.0,<5.0",
  # JAX (Python package). jaxlib (native backend) often must be installed
  # specially for GPUs/TPUs; see README for GPU/TPU install instructions.
  "jax>=0.4,<1.0",
  "flax>=0.8,<1.0",
  "optax>=0.1,<1.0",
  # PyTorch (CPU by default). For GPU builds prefer following instructions on pytorch.org.
  "torch>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9.0",
  "pytest-cov>=4.1,<6.0",
  "black>=23.0,<25.0",
  "isort>=5.12,<6.0",
  "mypy>=1.5,<2.0",
  "pre-commit>=3.3,<4.0",
  "ruff>=0.1,<1.0",
]

[project.urls]
Homepage = "https://github.com/KurtSoncco/LatinX"
Repository = "https://github.com/KurtSoncco/LatinX"
Issues = "https://github.com/KurtSoncco/LatinX/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["latinx"]

[tool.setuptools.package-dir]
latinx = "latinx"

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]

# coverage configuration
[tool.coverage.run]
source = ["latinx"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "jax.*",
  "torch.*",
  "matplotlib.*",
  "seaborn.*",
  "plotly.*",
  "scipy.*",
]
ignore_missing_imports = true

# ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by black)
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]